# qsiparc

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  apptainer.def  index.html  mkdocs.yml  parcellation.example.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml
api/: index.html
api/atlas/: index.html
api/connectome/: index.html
api/discover/: index.html
api/extract/: index.html
contributing/: index.html
docs/: contributing.md  index.md  installation.md  modules.md  quickstart.md
docs/api/: atlas.md  connectome.md  discover.md  extract.md  index.md
docs/user-guide/: atlases.md  cli.md  connectomes.md  inputs.md  outputs.md  scalars.md
installation/: index.html
notebooks/: connectomes.ipynb  demo_io.ipynb  demo_parcellation.ipynb  demo_qsirecon_parcellation.ipynb  discover.ipynb  extract.ipynb
quickstart/: index.html
search/: search_index.json
src/qsiparc/: __init__.py  aggregate.py  atlas.py  cli.py  config.py  connectome.py  discover.py  extract.py  output.py  provenance.py
src/qsiparc/atlas/: __init__.py  registry.py  transforms.py
src/qsiparc/data/: io_spec.json
src/qsiparc/io/: __init__.py  data_models.py  loaders.py  validation.py
src/qsiparc/metrics/: __init__.py  connectivity.py  metrics.py  summary.py
src/qsiparc/parcellation/: __init__.py  jobs.py  pipeline.py  runner.py  (+3 more)
tests/: conftest.py  test_aggregate.py  test_config.py  test_connectome.py  test_discover.py  test_extract.py  test_integration.py  test_metrics_builtin.py  test_parcellation_volume.py  test_skeleton.py
user-guide/atlases/: index.html
user-guide/cli/: index.html
user-guide/connectomes/: index.html
user-guide/inputs/: index.html
user-guide/outputs/: index.html
user-guide/scalars/: index.html
(+5 files in other folders)
