[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qsiparc"
version = "0.1.0"
description = "Extract parcellated diffusion features and connectivity matrices from QSIRecon outputs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Gal" },
]
keywords = ["neuroimaging", "diffusion", "parcellation", "qsirecon", "connectome", "brain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "nibabel>=5.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "click>=8.0",
    "pybids>=0.22.0",
    "parcellate>=0.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pandas-stubs>=2.0",
    "pre-commit>=3.0",
]

[project.scripts]
qsiparc = "qsiparc.cli:main"

[project.urls]
Repository = "https://github.com/snbb/qsiparc"

[tool.hatch.build.targets.wheel]
packages = ["src/qsiparc"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "parcellate"
ignore_missing_imports = true
